@@ -1,4 +1,4 @@
-# -*- Makefile -*- Time-stamp: <07/08/03 09:12:25 ptr>
+# -*- Makefile -*- Time-stamp: <07/08/03 23:55:31 ptr>
 
 SRCROOT := ../..
 
@@ -14,26 +14,26 @@ stldbg-shared:	DEFS += -D__FIT_STEM_TRACE=1
 endif
 
 check:	all-shared
-	$(MAKE) -C ../../test/stem
-	(cd ../../test/stem; ${OUTPUT_DIR}/stem_ut) || exit 1
-	(cd ../../test/stem; ${OUTPUT_DIR_DBG}/stem_ut) || exit 1
+	$(MAKE) -C ut
+	(cd ut; ${OUTPUT_DIR}/stem_ut) || exit 1
+	(cd ut; ${OUTPUT_DIR_DBG}/stem_ut) || exit 1
 ifndef WITHOUT_STLPORT
-	(cd ../../test/stem; ${OUTPUT_DIR_STLDBG}/stem_ut) || exit 1
+	(cd ut; ${OUTPUT_DIR_STLDBG}/stem_ut) || exit 1
 endif
 
 check-release-shared:	release-shared
-	$(MAKE) -C ../../test/stem release-shared
-	(cd ../../test/stem; ${OUTPUT_DIR}/stem_ut) || exit 1
+	$(MAKE) -C ut release-shared
+	(cd ut; ${OUTPUT_DIR}/stem_ut) || exit 1
 
 check-dbg-shared:	dbg-shared
-	$(MAKE) -C ../../test/stem dbg-shared
-	(cd ../../test/stem; ${OUTPUT_DIR_DBG}/stem_ut) || exit 1
+	$(MAKE) -C ut dbg-shared
+	(cd ut; ${OUTPUT_DIR_DBG}/stem_ut) || exit 1
 
 ifndef WITHOUT_STLPORT
 check-stldbg-shared:	stldbg-shared
-	$(MAKE) -C ../../test/stem stldbg-shared
-	(cd ../../test/stem; ${OUTPUT_DIR_STLDBG}/stem_ut) || exit 1
+	$(MAKE) -C ut stldbg-shared
+	(cd ut; ${OUTPUT_DIR_STLDBG}/stem_ut) || exit 1
 endif
 
-depend::
-	$(MAKE) -C ../../test/stem depend
+depend clean distclean mostlyclean maintainer-clean::
+	${MAKE} -C ut $@
